--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -25,6 +25,6 @@
         <Button Grid.Row="0" Grid.Column="0">Leicht</Button>
         <Button Grid.Row="0" Grid.Column="1">Mittel</Button>
         <Button Grid.Row="0" Grid.Column="2">Schwer</Button>
-        <Button Grid.Row="1" Grid.Column="1">Schließen</Button>
+        <Button Grid.Row="1" Grid.Column="1" Command="{Binding Close}">Schließen</Button>
     </Grid>
 </Window>
