--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,26 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Minesweeper Menü" Height="450" Width="300"
+        >
     <Window.Resources>
         <Style TargetType="Button">
             <Setter Property="Margin" Value="10"/>
         </Style>
+        <Style TargetType="Window"></Style>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition/>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="0.5*"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+        
+           
         </Grid.ColumnDefinitions>
 
         <Button Grid.Row="0" Grid.Column="0" Command="{Binding EasyGame}">Leicht</Button>
-        <Button Grid.Row="0" Grid.Column="1" Command="{Binding MiddleGame}">Mittel</Button>
-        <Button Grid.Row="0" Grid.Column="2" Command="{Binding HardGame}">Schwer</Button>
-        <Button Grid.Row="1" Grid.Column="1" Command="{Binding Close}">Schließen</Button>
+        <Button Grid.Row="1" Command="{Binding MiddleGame}" >Mittel</Button>
+        <Button Grid.Row="2" Command="{Binding HardGame}" >Schwer</Button>
+        <Button Grid.Row="3" Grid.Column="0"  Height="50" Command="{Binding Close}"  >Schließen</Button>
     </Grid>
 </Window>
