--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -20,15 +20,10 @@
             <RowDefinition Height="0.5*"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-        
-           
-        </Grid.ColumnDefinitions>
 
-        <Button Grid.Row="0" Grid.Column="0" Command="{Binding EasyGame}">Leicht</Button>
+        <Button Grid.Row="0" Command="{Binding EasyGame}">Leicht</Button>
         <Button Grid.Row="1" Command="{Binding MiddleGame}" >Mittel</Button>
         <Button Grid.Row="2" Command="{Binding HardGame}" >Schwer</Button>
-        <Button Grid.Row="3" Grid.Column="0"  Height="50" Command="{Binding Close}"  >Schließen</Button>
+        <Button Grid.Row="3"  Height="50" Command="{Binding Close}"  >Schließen</Button>
     </Grid>
 </Window>
